Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2017

Incorrect calculation determining performance improvement for flush

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.3.1
    • 1.4.0
    • tablet
    • None

    Description

      The code to calculate the MM "perf improvement score" for a flush had two bugs:
      (1) we calculated threshold - current_usage instead of current_usage - threshold, which resulted in a negative score
      (2) we had an unsigned integer overflow, which resulted in the above negative score becoming insanely large

      These two wrongs "made a right" in which we'd still trigger flushes at the flush threshold, which is why this went unnoticed for quite some time. However, the flushing behavior is more aggressive than originally intended, and we would lose the correct prioritization of flushing tablets that are farther above the threshold.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment